<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReservasActivity"
    android:orientation="vertical">
    <TextView
        android:id="@+id/tx_reservas_usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:layout_marginTop="5dp"

        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/reservas"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="60sp" />

    <Button
        android:id="@+id/bt_reservas_mas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/suma"
        android:textAlignment="center"
        android:textSize="40sp"
        android:layout_gravity="center"
        />

    <TextView
        android:id="@+id/tx_reservas_cant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/cero"
        android:textAlignment="center"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="120sp" />
    <Button
        android:id="@+id/bt_reservas_menos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/resta"
        android:textSize="40sp"
        android:layout_gravity="center"
        />

    <Button
        android:id="@+id/bt_reservas_guardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="6dp"
        android:backgroundTint="@android:color/holo_purple"
        android:text="@string/guardar"
        android:textSize="25sp"/>
</LinearLayout>