<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VisualizarActivity"
    android:orientation="vertical">
    <TextView
        android:id="@+id/tx_visualizar_usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:layout_marginTop="5dp"

        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:text="@string/compras"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="50sp" />


    <TextView
        android:id="@+id/tx_visualizar_compras"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cero"
        android:textAlignment="center"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="120sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:text="@string/reservas"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/tx_visualizar_reservas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cero"
        android:textAlignment="center"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="120sp" />

    <Button
        android:id="@+id/bt_visualizar_volver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="6dp"
        android:backgroundTint="@android:color/holo_purple"
        android:text="@string/volver"
        android:textSize="25sp"/>
</LinearLayout>