<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/usuario"
        android:layout_marginTop="30dp"
        android:layout_marginStart="6dp"
        />
    <EditText
        android:id="@+id/ed_usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        android:layout_marginTop="8dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clave"
        android:layout_marginTop="20dp"
        android:layout_marginStart="6dp"
        />
    <EditText
        android:id="@+id/ed_clave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="6dp"
        />

    <Button
        android:id="@+id/bt_ingresar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="6dp"
        android:backgroundTint="@android:color/holo_purple"
        android:text="@string/ingresar"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/tx_usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:textAlignment="center"
        android:textSize="30sp"
        />

</LinearLayout>